--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -74,6 +74,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="LookVertical",Scale=-1.000000,Key=MouseY)
